Add CI workflow testing branch

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -12,53 +12,49 @@ env:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    continue-on-error: true         # <— demo-friendly: don’t block Stage-1
+    continue-on-error: true
     strategy:
       matrix:
         service:
-          - backend/customer_service
-          - backend/order_service
-          - backend/product_service
-          - frontend
+          - task10_2d/backend/customer_service
+          - task10_2d/backend/order_service
+          - task10_2d/backend/product_service
+          - task10_2d/frontend
     steps:
       - uses: actions/checkout@v4
 
-      # -------- Backend (Python) --------
+      # ---- Backend (Python) ----
       - name: Set up Python
-        if: startsWith(matrix.service, 'backend/')
+        if: startsWith(matrix.service, 'task10_2d/backend/')
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install deps (backend)
-        if: startsWith(matrix.service, 'backend/')
+        if: startsWith(matrix.service, 'task10_2d/backend/')
         run: |
           if [ -f "${{ matrix.service }}/requirements-dev.txt" ]; then
             pip install -r "${{ matrix.service }}/requirements-dev.txt" || true
-          else
-            echo "No dev requirements found, continuing."
           fi
 
       - name: Run tests (backend)
-        if: startsWith(matrix.service, 'backend/')
+        if: startsWith(matrix.service, 'task10_2d/backend/')
         run: |
           if [ -d "${{ matrix.service }}/tests" ]; then
             pytest -q "${{ matrix.service }}/tests" || true
-          else
-            echo "No tests folder found, continuing."
           fi
 
-      # -------- Frontend (Node) --------
+      # ---- Frontend (Node) ----
       - name: Set up Node
-        if: matrix.service == 'frontend'
+        if: matrix.service == 'task10_2d/frontend'
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
       - name: Frontend build check
-        if: matrix.service == 'frontend'
+        if: matrix.service == 'task10_2d/frontend'
         run: |
-          cd frontend
+          cd task10_2d/frontend || exit 0
           if [ -f package-lock.json ]; then
             npm ci || true
           else
@@ -85,10 +81,10 @@ jobs:
 
       - name: Build images
         run: |
-          docker build -t $ACR_LOGIN_SERVER/customer-service:${IMAGE_TAG} backend/customer_service
-          docker build -t $ACR_LOGIN_SERVER/order-service:${IMAGE_TAG}    backend/order_service
-          docker build -t $ACR_LOGIN_SERVER/product-service:${IMAGE_TAG}  backend/product_service
-          docker build -t $ACR_LOGIN_SERVER/frontend:${IMAGE_TAG}         frontend
+          docker build -t $ACR_LOGIN_SERVER/customer-service:${IMAGE_TAG} task10_2d/backend/customer_service
+          docker build -t $ACR_LOGIN_SERVER/order-service:${IMAGE_TAG}    task10_2d/backend/order_service
+          docker build -t $ACR_LOGIN_SERVER/product-service:${IMAGE_TAG}  task10_2d/backend/product_service
+          docker build -t $ACR_LOGIN_SERVER/frontend:${IMAGE_TAG}         task10_2d/frontend
 
       - name: Push images
         run: |
