--- a/.github/workflows/stage2-staging.yml
+++ b/.github/workflows/stage2-staging.yml
@@ -29,7 +29,7 @@ jobs:
 
       
 
-      - name: Deploy frontend (ACI)
+      - name: Deployment
         env:
           SP_JSON: ${{ secrets.AZURE_CREDENTIALS }}
         run: |
@@ -66,7 +66,7 @@ jobs:
           done
           echo "Container not Running after timeout"; exit 1
 
-      - name: Health check (frontend)
+      - name: Health check 
         run: |
           URL="http://fe-${GITHUB_RUN_ID}.${{ env.LOCATION }}.azurecontainer.io"
           echo "Checking $URL ..."
